force-app/main/default/objects/Person__c/fields/Doctor_Work_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Work_Schedules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Work Schedules</label>
    <referenceTo>Facility_Hours__c</referenceTo>
    <relationshipLabel>People</relationshipLabel>
    <relationshipName>People</relationshipName>
    <type>Lookup</type>
</CustomField>