force-app/main/default/objects/Person__c/fields/Medical_Insurence__c.field-meta.xml
<CustomField>
    <fullName>Medical_Insurence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Insurence</label>
    <referenceTo>Medical_Insurence__c</referenceTo>
    <relationshipLabel>People</relationshipLabel>
    <relationshipName>People_Medical_Insurence</relationshipName>
    <type>Lookup</type>
</CustomField>