force-app/main/default/objects/Person__c/validationRules/Email_or_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_or_Phone_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Email__c ) &amp;&amp; ISBLANK(Phone__c)</errorConditionFormula>
    <errorMessage>Please add at least one form of contact: Email or Phone number</errorMessage>
</ValidationRule>