force-app/main/default/objects/Person__c/validationRules/Personal_ID_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Personal_ID_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
	NOT(REGEX(Personal_ID_Number__c, &quot;^[0-9]{11}$&quot;)),
	MOD(
		10-MOD(
			VALUE(MID(Personal_ID_Number__c, 1, 1)) * 1 +
                	VALUE(MID(Personal_ID_Number__c, 2, 1)) * 3 +
                	VALUE(MID(Personal_ID_Number__c, 3, 1)) * 7 +
                	VALUE(MID(Personal_ID_Number__c, 4, 1)) * 9 +
                	VALUE(MID(Personal_ID_Number__c, 5, 1)) * 1 +
                	VALUE(MID(Personal_ID_Number__c, 6, 1)) * 3 +
                	VALUE(MID(Personal_ID_Number__c, 7, 1)) * 7 +
                	VALUE(MID(Personal_ID_Number__c, 8, 1)) * 9 +
                	VALUE(MID(Personal_ID_Number__c, 9, 1)) * 1 +
                	VALUE(MID(Personal_ID_Number__c, 10, 1)) * 3
			,10
		)
		,10
	)
	&lt;&gt;
	VALUE(MID(Personal_ID_Number__c, 11, 1))
)</errorConditionFormula>
    <errorDisplayField>Personal_ID_Number__c</errorDisplayField>
    <errorMessage>The PESEL number you entered is incorrect. Please check the length (11 digits) and checksum.</errorMessage>
</ValidationRule>