force-app/main/default/objects/Person__c/listViews/All_People.listView-meta.xml
<ListView>
    <fullName>All_People</fullName>
    <columns>First_Name__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>All People</label>
</ListView>